--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.9.1",
+    "framer-motion": "^12.23.25",
     "next": "16.0.7",
     "react": "19.2.0",
-    "react-dom": "19.2.0"
+    "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
