--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,8 @@
         "name": "next"
       }
     ],
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"],
