--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "seed": "npx ts-node -O '{\"module\":\"commonjs\"}' ./scripts/seed.ts"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
+    "@langchain/google-genai": "^2.0.4",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.9.1",
     "framer-motion": "^12.23.25",
+    "langchain": "^1.1.5",
     "mysql2": "^3.15.3",
     "next": "16.0.7",
     "react": "19.2.0",
