--- a/package.json
+++ b/package.json
@@ -15,16 +15,19 @@
     "@langchain/google-genai": "^2.0.4",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.9.1",
+    "class-transformer": "^0.5.1",
     "framer-motion": "^12.23.25",
     "langchain": "^1.1.5",
     "mysql2": "^3.15.3",
     "next": "16.0.7",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-github-calendar": "^5.0.0",
     "react-icons": "^5.5.0",
     "react-type-animation": "^3.2.0",
     "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.28"
+    "typeorm": "^0.3.28",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
