--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "seed": "npx ts-node -O '{\"module\":\"commonjs\"}' ./scripts/seed.ts"
   },
   "dependencies": {
+    "@google/genai": "^1.34.0",
     "@google/generative-ai": "^0.24.1",
     "@langchain/google-genai": "^2.0.4",
     "@tsparticles/react": "^3.0.0",
@@ -24,8 +25,10 @@
     "react-dom": "19.2.0",
     "react-github-calendar": "^5.0.0",
     "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-type-animation": "^3.2.0",
     "reflect-metadata": "^0.2.2",
+    "remark-gfm": "^4.0.1",
     "typeorm": "^0.3.28",
     "zustand": "^5.0.9"
   },
