--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "typeorm": "typeorm-ts-node-commonjs",
-    "seed": "npx ts-node -O '{\"module\":\"commonjs\"}' ./scripts/seed.ts"
+    "typeorm": "typeorm-ts-node-commonjs"
   },
   "dependencies": {
     "@google/genai": "^1.34.0",
